fixed flickering leaderboard

--- a/src/app/maze/game-board/path.css
+++ b/src/app/maze/game-board/path.css
@@ -4,50 +4,3 @@
   left: 0;
   pointer-events: none;
 }
-.maze-path--pulse {
-  animation: path--pulse 200ms 3 ease-in-out;
-}
-@-moz-keyframes path--pulse {
-  0% {
-    opacity: 1;
-  }
-  50% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-@-webkit-keyframes path--pulse {
-  0% {
-    opacity: 1;
-  }
-  50% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-@-o-keyframes path--pulse {
-  0% {
-    opacity: 1;
-  }
-  50% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-@keyframes path--pulse {
-  0% {
-    opacity: 1;
-  }
-  50% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
